# haverscript

./: .gitignore  CHANGELOG.md  DSL_DESIGN.md  INSTALL.md  LICENSE  README.md  pyproject.toml
docs/: DSL_DESIGN.md  MARKDOWN.md  MIDDLEWARE.md
examples/: README.md
examples/agents/: README.md  main.py
examples/cache/: README.md  main.py
examples/chaining_answers/: README.md  main.py
examples/chatbot/: main.py
examples/check/: README.md  main.py
examples/custom_service/: main.py
examples/first_agent/: README.md  main.py
examples/first_example/: README.md  main.py
examples/format/: README.md  main.py
examples/havershell/: main.py
examples/images/: README.md  main.py
examples/meta_model/: main.py
examples/options/: README.md  main.py
examples/others/: proof_reading.py  sentence_iterations.py
examples/together/: main.py
examples/tools/: main.py
examples/tree_of_calls/: README.md  main.py
examples/validate/: README.md  main.py
examples/virtual_host/: main.py
src/haverscript/: __init__.py  agents.py  cache.py  chatbot.py  exceptions.py  haverscript.py  json_utils.py  languagemodel.py  markdown.py  middleware.py  ollama.py  render.py  together.py  tools.py  types.py  utils.py
tests/: test_haverscript.py  test_utils.py
tests/docs/: test_docs.py
tests/e2e/: test_e2e_haverscript.py
tests/e2e/test_e2e_haverscript/: test_cache.2.txt  test_cache.3.txt  test_cache.together.2.txt  test_cache.together.3.txt  test_chaining_answers.together.txt  test_chaining_answers.txt  test_chatbot.together.txt  test_chatbot.txt  test_check.txt  test_custom_service.as_is.txt  test_first_agent.txt  test_first_example.together.txt  test_first_example.txt  test_format.together.txt  test_format.txt  test_images.txt  test_meta.txt  test_meta_model.txt  test_options.together.txt  test_options.txt  test_together.together.txt  test_together.txt  test_tree_of_calls.together.txt  test_tree_of_calls.txt  test_tree_of_calls_together.txt  test_validate.txt
tests/unit/: test_unit_haverscript.py
