[project]
name = "haverscript"
version = "0.1.1"
description = "Library for managing LLM interactions."
authors = [{ name = "Andy Gill", email = "andygillku@gmail.com" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
    "frozendict>=2.4.6",
    "ollama>=0.4.4",
    "tenacity>=9.0.0",
    "yaspin>=3.0.0",
    "pydantic>=2.9.0",
]

[project.optional-dependencies]
together = [
    "together>=1.3.10",
]
# all includes everything, and pytest support
all = [
    "pytest>=8.3.0",
    "pytest-regressions>=2.5.0",
    "together>=1.3.10",
]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = ["."]
