[project]
name = "haverscript"
version = "0.2.2"
description = "Library for managing LLM interactions."
authors = [{ name = "Andy Gill", email = "andygillku@gmail.com" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "docstring_parser >= 0.16",
    "frozendict>=2.4.6",
    "jsonref>=1.1.0",
    "ollama>=0.4.4",
    "pydantic>=2.9.0",
    "tenacity>=9.0.0",
    "yaspin>=3.0.0",
]

[project.optional-dependencies]
together = [
    "together>=1.3.14",
]
# all includes everything, and pytest support
all = [
    "pytest>=8.3.0",
    "pytest-regressions>=2.5.0",
    "pytest-xdist>=3.6.1",
    "prompt_toolkit>=3.0.48",
    "together>=1.3.10",
]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = ["."]
